# cd-with-argocd

./: .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  argocd-application.yml  demo-workflow-1.yml  demo-workflow-2.yml  demo-workflow-3.yml  entrypoint.sh  main.py  poetry-env-setup.sh  pyproject.toml  run.sh
.github/workflows/: test_build.yml
app/: main.py
argo-workflows-tasks/mlflow-connect/: Dockerfile  build-push.sh  list_experiments.py
argo-workflows-tasks/snowflake-connect/: Dockerfile  build-push.sh  show_few_rows.py
demo-argo-events/: demo-event-senor-1.yml  demo-event-sensor-1.yml  job-send-webhook.yml
demo-argo-workflows/: demo-workflow-1.yml  demo-workflow-2.yml  demo-workflow-3.yml  demo-workflow-4.yml  demo-workflow-5.yml  demo-workflow-6.yml
manifests/: deployment.yml
manifests-argo-events/: s3-sealed-secret.yml  snowflake-sealed-secret.yml
manifests-argo-workflows/: playground.yml  pvc.yml  role-binding.yml  role.yml  s3-sealed-secret.yml
manifests-argocd/: configmap.yml  deployment.yml  sealed-secret.yml
tests/: test_main.py
